sites/all/themes/msd2014/css/msd2014-extra.css
/* ... */
.tabs ul {
    margin: 10px 0;
    padding: 0;
    list-style-type: none;
    list-style-image: none;
}

.tabs li {
    display: inline;
    padding: 5px 10px;
    background: #888;
    background: rgba(0, 51, 102, 0.4);
    border: 1px solid #A4AFC4
}

.tabs a,
.tabs a:visited,
.tabs a:link {
    color: #fff;
    border-bottom: none;
}

.tabs a:hover {
    text-decoration: underline;
}


/* 4th Tab */
.content .ui-tabs .ui-4-tabs li {
  display: table-cell;
  float: none;
}

.content .ui-tabs .ui-4-tabs .ui-tabs-anchor span {
  background-position: 205px center!important;
  border-bottom: 0;
}

.content .ui-tabs .ui-4-tabs .ui-tabs-anchor img {
  width: 239px;
  height: 183px;
}

a#ui-id-1.ui-tabs-anchor span{
  border-bottom-width: 0;
}

.content .ui-tabs-active a span {
  border-bottom-width: 0!important;
}

a#ui-id-4.ui-tabs-anchor {
  padding:0px;
  margin:0px;
  border: none;
  background-color:#000;
  line-height:0px;
}

a#ui-id-4.ui-tabs-anchor span {
  display: block;
  height: 54px;
  line-height: 54px;
  padding-left: 25px;
  background-color: #999999;
  background-image: url(../images/tab-down-arrow-white.png);
  background-repeat: no-repeat;
  background-position: 270px center;
  color: #FFF;
}

.content .ui-widget-content {
  background: transparent!important;
}

.content .ui-widget-header.ui-tabs-nav {
  background: transparent!important;
}


.content .ui-tabs-panel.ui-widget-content {
  background: white!important;
}


/* 12 May Mobile Tabs */
@media only all and (max-width: 640px) {
  .tab-content-wrapper {
    display: block;
  }

  .tab-content-wrapper > tbody,
  .tab-content-wrapper > tbody > tr,
  .tab-content-wrapper > tbody > tr > td {
    display: block;
    width: 100%;
  }

  .tab-content-wrapper .tabbed-content-right-wrap,
  .tab-content-wrapper table,
  .tab-content-wrapper tbody,
  .tabbed-content-left-wrap table
  {
    width: 100%;
  }
  .ui-4-tabs a#ui-id-1.ui-tabs-anchor, 
  .ui-4-tabs a#ui-id-2.ui-tabs-anchor, 
  .ui-4-tabs a#ui-id-3.ui-tabs-anchor,
  .ui-4-tabs a#ui-id-4.ui-tabs-anchor,
  .ui-4-tabs .ui-tabs-anchor img, 
  .ui-4-tabs .ui-tabs-active img {
    width: 118px!important;
  }
}

.content-left-wrap blockquote ul li {
  list-style-image: none;
  padding-left: 1.1em;
}

/* MSD Brand-style tables */

.msd-table tr {
  border: none;
}

.msd-table thead th, .msd-table thead td {
  background-color: #000;
  color: #fff;
  font-family: "ff-din-web",sans-serif;
  font-size: 13px;
}

.msd-table th, .msd-table td {
  border: 1px solid #fff;
}

.msd-table tbody td {
  padding: 6px 8px;
  font-size: 11px;
}

.msd-table tbody tr:nth-child(even) td {
  background-color: #DCDDDF;
}

.msd-table tbody tr:nth-child(odd) td {
  background-color: #F1F1F1;
}

/* Scanned - 3D Integration */
.programs-module h2 {
  text-transform: uppercase;
}

.programs-module .dollhouse {
  display: block;
  height: 225px;
  margin-bottom: 7px;
  overflow: hidden;
  width: 239px;
}

.programs-module .dollhouse iframe {
  height: 240px;
  margin-bottom: 0;
  margin-left: -6%;
  margin-right: auto;
  margin-top: 0;
  width: 112%;
}

.featherlight.modal iframe {
  height: 90%;
  max-height: 720px;
  max-width: 1200px;
  padding-top: 5%;
  width: 90%;
}

body .uomcontent .button:hover,
body .uomcontent .button-small:hover {
  text-decoration: none;
}

li p {
  display: inline-block; 
}

